# haskgrademaker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  haskgrademaker.cabal
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config
src/: API.hs  DataStructures.hs  Grid.hs  Main.hs  Parser.hs  Parsing.hs  Processing.hs  Types.hs  Util.hs
