cabal-version:       2.2

name:                haskgrademaker
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/juanocv/haskgrademaker#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Juan Carvalho, Gabriel Chacon
maintainer:          juan.oliveira@aluno.ufabc.edu.br, gabriel.chacon@aluno.ufabc.edu.br
copyright:           2024 Juan Carvalho, Gabriel Chacon
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable haskgrademaker
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Types, Parser, API, Util, Grid
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, http-conduit, http-client, http-types, 
                       aeson, bytestring, text, mtl, process
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
